Use Type.valueOf instead of new Type(value)